# python-ai-template

./: .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  clean-state-checklist.md  conftest.py  docker-compose.yml  evaluator-rubric.md  feature_list.json  fix_chinese.py  init.ps1  init.sh  progress.md  pyproject.toml  session-handoff.md  test_chinese_result.txt  test_lower.txt  test_re.txt  test_utf8.txt  使用手册.md
app/: bootstrap.py  main.py
configs/: agents.yaml  default.yaml  models.yaml
configs_work_orders/: work_orders.yaml
migrations/: env.py
scripts/: check-architecture.ps1  check-architecture.sh  check_fact_registry.py  generate_orders.py  run-tests.sh  update_system_state.py
secrets/: README.md
skills/: _schema.yaml  rag_answer.yaml
templates/: api_change_template.md  feature_change_template.md  hotfix_template.md  patch_order_template.md  work_order_template.md
tests/: test_01_skeleton.py  test_02_database.py  test_03_error_middleware.py  test_04_llm_gateway.py  test_05_vector_store.py  test_06_sse_stream.py  test_07_task_queue.py  test_08_prompt_manager.py  test_09_context_manager.py  test_10_tools_registry.py  test_11_agent.py  test_12_multi_agent.py  test_13_workflow.py  test_14_chat.py  test_15a_knowledge_docs.py  test_15b_knowledge_rag.py  test_15c_knowledge_e2e.py  test_16_intent.py  test_17_prompt_admin.py  test_18_observability.py  test_19_eval.py  test_20_auth_ratelimit.py  test_f21_deployment.py
workflows/: _schema.yaml  default.yaml
变更工单/: CO-001_context_yaml_fix.md
工单/: F01_project_skeleton.md  F02_database_models_redis.md  F03_error_middleware.md  F04_llm_gateway.md  F05_vector_store_qdrant.md  F06_sse_stream.md  F07_task_queue_arq.md  F08_prompt_manager.md  F09_context_manager.md  F10_tools_mcp_registry.md  F11_agent_base_state_react.md  (+12 more)
(+129 files in other folders)
