[project]
name = "python-ai-template"
version = "0.1.0"
description = "General-purpose Python AI platform template with 14 reusable capabilities"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sse-starlette>=2.0.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "pyyaml>=6.0,<7.0.0",
    "structlog>=24.0.0,<25.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
    "redis>=5.0.0,<6.0.0",
    "arq>=0.26.0,<1.0.0",
    "qdrant-client>=1.9.0,<2.0.0",
    "litellm>=1.40.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "tenacity>=8.3.0,<9.0.0",
    "orjson>=3.10.0,<4.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "aiofiles>=23.2.0,<25.0.0",
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.4.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pyyaml>=6.0,<7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.alembic]
script_location = "migrations"